--- a/FrekisSDKSample/Podfile
+++ b/FrekisSDKSample/Podfile
@@ -4,7 +4,7 @@
 target 'FrekisSDKSample' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
- pod 'Frekis'
+ pod 'Frekis', :path => '../'
   # Pods for FrekisSDKSample
 
 end
