--- a/FrekisSDKSample/Podfile
+++ b/FrekisSDKSample/Podfile
@@ -6,5 +6,12 @@ target 'FrekisSDKSample' do
   use_frameworks!
  pod 'Frekis', :path => '../'
   # Pods for FrekisSDKSample
-
+pod 'NVActivityIndicatorView', '~> 4.8.0'
+post_install do |installer|
+    installer.pods_project.targets.each do |target|
+        target.build_configurations.each do |config|
+            config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+        end
+    end
+end
 end
